--- a/po/QML-nl.po
+++ b/po/QML-nl.po
@@ -1,6 +1,6 @@
 msgid ""
 msgstr ""
-"PO-Revision-Date: 2021-04-22 16:46+0000\n"
+"PO-Revision-Date: 2021-04-23 12:16+0000\n"
 "Last-Translator: JASP Stats <b.boutin@uva.nl>\n"
 "Language-Team: Dutch <https://hosted.weblate.org/projects/jasp/"
 "jasptestmodule-qml/nl/>\n"
@@ -44,11 +44,11 @@ msgstr "Test jaspStatus"
 
 msgctxt "Description|"
 msgid "Test jaspHtml"
-msgstr ""
+msgstr "Test jaspHtml"
 
 msgctxt "Description|"
 msgid "Test jaspContainer"
-msgstr ""
+msgstr "Test jaspContainer"
 
 msgctxt "Description|"
 msgid "Test Plot Status"
