--- a/po/QML-de.po
+++ b/po/QML-de.po
@@ -5,6 +5,7 @@ msgstr ""
 "Language-Team: German <https://hosted.weblate.org/projects/jasp/"
 "jasptestmodule-qml/de/>\n"
 "Language: de\n"
+"X-Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
