--- a/po/QML-nl.po
+++ b/po/QML-nl.po
@@ -5,6 +5,7 @@ msgstr ""
 "Language-Team: Dutch <https://hosted.weblate.org/projects/jasp/"
 "jasptestmodule-qml/nl/>\n"
 "Language: nl\n"
+"X-Language: nl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
