--- a/po/QML-ja.po
+++ b/po/QML-ja.po
@@ -4,6 +4,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Qt-Contexts: true\n"
+"Language: ja\n"
 
 msgctxt "Description|"
 msgid "Wait for it..."
